; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiTex.c_update_fps.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiTex.c_update_fps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i32 }

@update_fps.frame_count = internal global i32 0, align 4
@update_fps.time_start = internal global i64 0, align 8
@.str = private unnamed_addr constant [10 x i8] c"%3.2f FPS\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @update_fps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_fps() #0 {
  %1 = alloca i64, align 8
  %2 = alloca %struct.timeval, align 8
  %3 = alloca float, align 4
  %4 = load i32, i32* @update_fps.frame_count, align 4
  %5 = add nsw i32 %4, 1
  store i32 %5, i32* @update_fps.frame_count, align 4
  %6 = call i32 @gettimeofday(%struct.timeval* %2, i32* null)
  %7 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = mul nsw i64 %8, 1000
  %10 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = sdiv i32 %11, 1000
  %13 = sext i32 %12 to i64
  %14 = add nsw i64 %9, %13
  store i64 %14, i64* %1, align 8
  %15 = load i64, i64* @update_fps.time_start, align 8
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %0
  %18 = load i64, i64* %1, align 8
  store i64 %18, i64* @update_fps.time_start, align 8
  br label %39

19:                                               ; preds = %0
  %20 = load i64, i64* %1, align 8
  %21 = load i64, i64* @update_fps.time_start, align 8
  %22 = sub nsw i64 %20, %21
  %23 = icmp sgt i64 %22, 5000
  br i1 %23, label %24, label %38

24:                                               ; preds = %19
  %25 = load i32, i32* @update_fps.frame_count, align 4
  %26 = sitofp i32 %25 to float
  %27 = fpext float %26 to double
  %28 = load i64, i64* %1, align 8
  %29 = load i64, i64* @update_fps.time_start, align 8
  %30 = sub nsw i64 %28, %29
  %31 = sitofp i64 %30 to double
  %32 = fdiv double %31, 1.000000e+03
  %33 = fdiv double %27, %32
  %34 = fptrunc double %33 to float
  store float %34, float* %3, align 4
  store i32 0, i32* @update_fps.frame_count, align 4
  %35 = load i64, i64* %1, align 8
  store i64 %35, i64* @update_fps.time_start, align 8
  %36 = load float, float* %3, align 4
  %37 = call i32 @vcos_log_error(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), float %36)
  br label %38

38:                                               ; preds = %24, %19
  br label %39

39:                                               ; preds = %38, %17
  ret void
}

declare dso_local i32 @gettimeofday(%struct.timeval*, i32*) #1

declare dso_local i32 @vcos_log_error(i8*, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
